# johnllm

./: .gitignore  README.md  pyproject.toml
johnllm/: __init__.py
johnllm/src/: __init__.py  cache.py  clients.py  core.py  llm.py  models.py  ops.py  utils.py
johnllm/src/lmps/: transform.py
