[tool.poetry]
name = "johnllm"
version = "0.1.0"
description = ""
authors = ["JohnPeng47 <johnpeng47@gmail.com>"]
readme = "README.md"
packages = [
    { include = "johnllm" }
]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.5"
pydantic = "^2.10.6"
tiktoken = "^0.8.0"
litellm = "^1.60.6"
instructor = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
