[tool.poetry]
name = "johnllm"
version = "0.1.0"
description = ""
authors = ["JohnPeng47 <johnpeng47@gmail.com>"]
readme = "README.md"
packages = [
    { include = "johnllm" }
]

[tool.poetry.dependencies]
python = "*"
jinja2 = "*"
pydantic = "*"
tiktoken = "*"
litellm = "*"
instructor = "1.7.3"
dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
